--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <meta name="author" content="Awaiken" />
     <!-- Page Title -->
-    <title>RShoe - Shoe One Page Website ini pake branch</title>
+    <title>RShoe - Shoe One Page Website</title>
     <!-- Google Fonts css-->
     <link
       href="../../../../fonts.googleapis.com/css0d04.css?family=Rubik:300,400,500,600,700,900%7CSaira+Semi+Condensed:300,400,500,600,700,800,900"
